composition page orchestra section/spacing fix

--- a/app/globals.css
+++ b/app/globals.css
@@ -1258,7 +1258,7 @@ textarea {
 
 .composition-divider {
   width: 80%;
-  height: 2px;
+  height: 1px;
   background-color: rgb(133, 133, 133);
   margin-bottom: 2rem;
   margin-top: 2rem;
@@ -1324,7 +1324,7 @@ textarea {
 }
 
 .section-bottom {
-  margin-bottom: 3rem !important;
+  margin-bottom: 2rem !important;
 }
 
 .composition-card p {
